--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,17 @@ input[type=checkbox].invisible-friend {
 	display: none;
 }
 
+p.res-answer {
+	padding: 15px;
+}
+div#disclaimer {
+	margin-top: 20px;
+}
+
 div#footer {
 	margin-top: 40px;
 }
 div#result {
-	max-height: 40px;
 	transition-property: all;
 	transition-duration: 1s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
